--- a/css/pg4.css
+++ b/css/pg4.css
@@ -1,25 +1,38 @@
 .container{
     width: 100vw;
     height: 100vh;
+    overflow-x: hidden;
+    padding: 0;
 }
 .content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     width: 100%;
-    height: 100%;
-    padding: 0 2em;
-    padding-top: 2em;
+    padding-left: 1.5em;
+    gap: 1em;
+    overflow-y: scroll;
+    margin-top: 3em;
+    margin-bottom: 3em;
 }
 .item{
     display: flex;
     flex-direction: column;
     text-align: center;
-    gap: 2.5em;
+    font-size: 1.3em;
+    gap: 2em;
     .info1{
         display: flex;
         flex-direction: column;
         gap: 1em;
         h1{
-            font-size: 2em;
+            font-size: 2.2em;
         }
+    }
+    .info2{
+        display: flex;
+        flex-direction: column;
+        gap: 1em;
     }
 }
 .button{
@@ -35,5 +48,53 @@
     cursor: pointer;
     p{
         font-size: 0.8em;
+    }
+}
+.item2{
+    width: 100%;
+    height: 44vh;
+    #img{
+        width: 100%;
+        height: 100%;
+        background-size: cover;
+        background-position: center;
+    }
+}
+@media(min-width:800px){
+
+    .content{
+        flex-direction: row-reverse;
+        align-items: flex-end;
+        gap: 5em;
+        height: 100%;
+        margin-top: 0;
+        margin-bottom: 0;
+        padding-left: 0;
+    }
+    .item{
+        height: 95%;
+        text-align: left;
+        gap: 6em;
+        font-size: 1.4em;
+        .info1{
+            width: 80%;
+            align-items: flex-start;
+        }
+        .info2{
+            width: 70%;
+        }
+        .button{
+            align-self: flex-start;
+            margin-top: 1em;
+        }
+    }
+    .item2{
+        height: 100%;
+        
+        display: flex;
+        align-items: flex-end;
+        #img{
+            height: 95%;
+        }
     }
 }
