--- a/css/pg4.css
+++ b/css/pg4.css
@@ -9,7 +9,7 @@
     flex-direction: column;
     align-items: center;
     width: 100%;
-    padding-left: 1.5em;
+    padding: 0 1em;
     gap: 1em;
     overflow-y: scroll;
     margin-top: 3em;
@@ -75,7 +75,7 @@
         height: 95%;
         text-align: left;
         gap: 6em;
-        font-size: 1.4em;
+        font-size: 1.5em;
         .info1{
             width: 80%;
             align-items: flex-start;
