--- a/css/pg5.css
+++ b/css/pg5.css
@@ -7,6 +7,7 @@ html{
     justify-content: center;
     width: 100vw;
     margin-top: 4em;
+    margin-bottom: 1em;
     overflow-x: hidden;
 }
 .content{
