--- a/css/pg6.css
+++ b/css/pg6.css
@@ -24,8 +24,8 @@
     display: flex;
     justify-content: center;
     img{
-    width: 20em;
-    height: 25em;
+    width: 30em;
+    height: 35em;
 }
 }
 
@@ -34,6 +34,7 @@
     flex-direction: column;
     align-items: center;
     text-align: center;
+    font-size: 1.5em;
     gap: 2em;
     img{
         height: 4em;
@@ -96,21 +97,22 @@
     }
 }
 
-@media(min-width:800px){
+@media(min-width:900px){
     .content{
         flex-direction: row-reverse;
         gap: 1em;
+        height: 90vh;
     }
     .img_cont{
         width: 85%;
-        height: auto;
+        height: 100%;
         padding-right: 0;
         overflow: hidden;
         display: flex;
         justify-content: center;
         img{
-        width: 100%;
-        height: 40em;
+        width: 95%;
+        height: 90%;
     }
     }
     .container .sect:last-child{
@@ -119,8 +121,8 @@
         align-items: flex-start;
         padding-left: 2em;
         text-align: left;
-        gap: 1.5em;
-        font-size: 1.3em;
+        gap: 2em;
+        font-size: 1.6em;
         p{
             font-size: 0.8em;
         }
@@ -137,6 +139,7 @@
         justify-content: flex-start;
     }
     .item:last-child{
+        margin-top: 2em;
         display: flex;
         width: 100%;
         height: auto;
